wwwroot/css/site.css
/* general background styling */
body {
    background-color: whitesmoke;
    font-family: Verdana, Geneva, Tahoma, sans-serif
}

#content {
    text-align: center;
}

li {
    border: 1px;
    border-style: solid;
    list-style: none;
    padding: 2px;
}

a:active a:hover {
    color: aqua;
}

a {
    color: white;
}

button {
    display: block;
    padding: 2px;
}

#chatbox {
    border-color: black;
    border: 5px;
    border-style: solid;
    border-radius: 5px;
    height: 90vh;
    text-align: left;
    padding-top: 10px;
    background-color: lightslategray;
    overflow-y: auto;
}

#messagebox {
    background-color: lightsteelblue;
    float: inline-end;
    /*height: 10vh;*/
    border-color: black;
    border: 5px;
    border-style: solid;
    border-radius: 5px;
    border-top: 0px;
    text-align: left;
    overflow-y: auto;
}

input {
    background-color: lightsteelblue;
    border-style: none;
    width: 100%;
    height:60%;
}

/* moves "New Message:" text to left side of input field */
label {
    float: left
}

nav {
    color: antiquewhite;
    float: right;
    width: fit-content;
    padding: 10px;
    height: 100vh;
    text-align: center;
    border: 5px;
    border-radius: 5px;
    background-image: linear-gradient(darkblue, blue);
    overflow-y: auto;
}

/* messages sent by other users */
#otheruser {
    background-color: white;
    display: table;
    margin-left: 5%;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 5px;
    padding: 2px;
}

/* messages sent by current user */
#user {
    background-color: lightskyblue;
    display: table;
    margin-left: 5%;
    margin-top: 5px;
    margin-bottom: 5px;
    border-radius: 5px;
    padding: 2px;
}

#usersShown {
    color: antiquewhite;
    padding: 10px;
    height: 100vh;
    width: 60%;
    text-align: center;
    border: 5px;
    border-radius: 5px;
    background-image: linear-gradient(darkblue, blue);
    overflow-y: auto;
}

.users:hover {
    background-image: linear-gradient(teal, blue);
}

